--- a/src/components/Main/List/List.css
+++ b/src/components/Main/List/List.css
@@ -1,83 +1,45 @@
-/* .form_box {
+.form_box {
     height: auto;
-    margin: 0px 40px 0px 40px;
+    margin: 0px 20px 0px 20px;
     padding: 20px;
-    background-color: rgb(222, 222, 222);
+    background-color: rgb(0, 0, 0);
     border-radius: 4px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     align-content: center;
-    border: 1px solid rgb(218, 218, 218);
-    box-shadow: 1px 1px 2px 0px rgb(200, 200, 200);
 }
 
 .input_title {
     height: 25px;
-    width: 400px;
-    margin: 10px 0 10px 0;
+    width: 100%;
+    margin: 1px 0 10px 0;
     border-radius: 4px;
-    border: 1px solid rgb(231, 231, 231);
-    box-shadow: 1px 1px 2px 0px rgb(200, 200, 200);
-    outline: none;
+    border: 0px;
 }
 
-.input_category {
-    height: 25px;
+.input_description {
+    height: 55px;
+    width: 100%;
     margin: 10px 0 10px 0;
     border-radius: 4px;
-    border: 1px solid rgb(231, 231, 231);
-    box-shadow: 1px 1px 2px 0px rgb(200, 200, 200);
-    outline: none;
+    border: 0px;
 }
 
 .input_date {
     height: 25px;
-    margin: 10px 0 10px 0;
-    border-radius: 4px;
-    border: 1px solid rgb(231, 231, 231);
-    box-shadow: 1px 1px 2px 0px rgb(200, 200, 200);
-    outline: none;
-}
-
-.input_description {
-    font-family: sans-serif;
-    height: 50px;
     width: 100%;
     margin: 10px 0 10px 0;
     border-radius: 4px;
-    border: 1px solid rgb(231, 231, 231);
-    box-shadow: 1px 1px 2px 0px rgb(200, 200, 200);
-    outline: none;
-}
-
-.input_site {
-    height: 25px;
-    width: 75%;
-    margin: 10px 0 10px 0;
-    border-radius: 4px;
-    border: 1px solid rgb(231, 231, 231);
-    box-shadow: 1px 1px 2px 0px rgb(200, 200, 200);
-    outline: none;
-}
-
-.input_image {
-    height: 25px;
-    width: 75%;
-    margin: 10px 0 10px 0;
-    border-radius: 4px;
-    border: 1px solid rgb(231, 231, 231);
-    box-shadow: 1px 1px 2px 0px rgb(200, 200, 200);
-    outline: none;
+    border: 0px;
 }
 
 .button_form {
-    background-color: white;
-    color:rgb(114, 114, 114);
-    height: 38px;
-    width: 80px;
+    background-color: rgba(203, 203, 203);
+    color: rgb(0, 0, 0);
+    height: 30px;
+    width: 100%;
+    margin: 10px 0 10px 0;
     border-radius: 4px;
-    border: 1px solid rgb(231, 231, 231);
-    box-shadow: 1px 1px 2px 0px rgb(200, 200, 200);
-    cursor: pointer;
-} */
+    border: 0px;
+}
